--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                         <div class="form-group">
                             <input type="text" class="form-control" placeholder="Message here..." ng-model="messageText2">
                         </div>
-                        <button type="submit" class="btn btn-default" ng-click="send(message)">Send</button>
+                        <button type="submit" class="btn btn-default" ng-click="send2(message)">Send</button>
                     </div>
                 </div>
             </div>
